--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,16 @@
 name: stripe_clean_architecture
 description: A clean architecture implementation of Stripe API using Dart.
-version: 0.0.1
+version: 0.0.2
 
 environment:
   sdk: ">=2.19.0 <3.8.0"
 
 dependencies:
-  http: ^1.3.0
   dotenv: ^4.2.0
+  http: ^1.3.0
   path: ^1.8.2
 
 dev_dependencies:
   lints: ^5.0.0
   test: ^1.24.0
+  very_good_analysis: ^7.0.0
